--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GoT</title>
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+  <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   <link rel="stylesheet" href="css/estilos.css">
   <script src="js/index.js" defer></script>
 </head>
@@ -18,26 +20,25 @@
     <ul class="personajes row list-unstyled">
       <li class="personaje personaje-dummy col">
         <div class="card personaje-card">
-          <img src="img/no-one.jpg" alt="Nombre y familia del personaje" class="card-img-top" />
+          <img src="img/no-one.jpg" alt="Nombre y familia del personaje"
+            class="card-img-top" />
           <div class="card-body">
             <h2 class="nombre card-title h4">Nombre y familia</h2>
             <div class="info">
               <ul class="metadata list-unstyled">
-                <li>Edad: X años</li>
-                <li>Estado:
-                  <i class="fas fa-thumbs-down"></i>
-                  <i class="fas fa-thumbs-up"></i>
+                <li class="edad">Edad: X años</li>
+                <li class="estado">Estado:
                 </li>
               </ul>
             </div>
             <div class="personaje-overlay">
               <ul class="metadata list-unstyled">
-                <li>Años de reinado: X</li>
-                <li>Arma: XXX</li>
-                <li>Destreza: X</li>
-                <li>Peloteo: X</li>
-                <li>Asesora a: X</li>
-                <li>Sirve a: X</li>
+                <li class="anyos-reino"></li>
+                <li class="arma"></li>
+                <li class="destreza"></li>
+                <li class="peloteo"></li>
+                <li class="asesora-a"></li>
+                <li class="sirve-a"></li>
               </ul>
               <div class="acciones">
                 <button class="btn accion">habla</button>
