En la lista con clase metadata solo aparecen li correspondiente

--- a/index.html
+++ b/index.html
@@ -26,19 +26,13 @@
             <h2 class="nombre card-title h4">Nombre y familia</h2>
             <div class="info">
               <ul class="metadata list-unstyled">
-                <li class="edad">Edad: X años</li>
+                <li class="edad"></li>
                 <li class="estado">Estado:
                 </li>
               </ul>
             </div>
             <div class="personaje-overlay">
               <ul class="metadata list-unstyled">
-                <li class="anyos-reino"></li>
-                <li class="arma"></li>
-                <li class="destreza"></li>
-                <li class="peloteo"></li>
-                <li class="asesora-a"></li>
-                <li class="sirve-a"></li>
               </ul>
               <div class="acciones">
                 <button class="btn accion">habla</button>
