Se arregla accion morir

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
               <ul class="metadata list-unstyled">
               </ul>
               <div class="acciones">
-                <button class="btn accion">habla</button>
-                <button class="btn accion">muere</button>
+                <button class="btn accion habla">habla</button>
+                <button class="btn accion muere">muere</button>
               </div>
             </div>
           </div>
